--- a/src/components/spaceship/spaceship.css
+++ b/src/components/spaceship/spaceship.css
@@ -1,4 +1,4 @@
-#loader-screen {
+.spaceship-section {
     position: absolute;
     width: 100%;
     height: 100vh;
@@ -12,7 +12,7 @@
 }
 
 
-#loader-screen .loader-section__container {
+.spaceship-section .spaceship-container {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -21,7 +21,7 @@
     align-items: center;
 }
 
-.loader-text-container {
+.spaceship-container__text {
     flex-wrap: wrap;
     line-height: 7rem;
     display: flex;
@@ -33,12 +33,12 @@
     align-items: center;
 
 }   
-.loader-text-container div {
+.spaceship-container__text span {
+    margin: 0 5px;
     text-align: center;
 }
 
-
-.loader-section .loader-container {
+.spaceship-section .spaceship-container__image {
     position: inherit;
 
     margin-top: 3.125rem;
@@ -54,7 +54,7 @@
 }
 
 
-.loader-section .loader-container .main-img {
+.spaceship-section .spaceship-container__image .main-img {
     position: absolute;
     /* height: 300px;
     width: 300px; */
@@ -68,7 +68,7 @@
     cursor: pointer;
 }
 
-.loader-section .loader-container .main-img.active {
+.spaceship-section .spaceship-container__image .main-img.active {
     animation: spin 8s linear 1s infinite;
 }
 
@@ -79,7 +79,7 @@
     
 }
 
-.loader-section .loader-container .main-img .circle {
+.spaceship-section .spaceship-container__image .main-img .circle {
     position: absolute;
     height: 5rem;
     width: 5rem;
@@ -94,12 +94,12 @@
 
 }
 
-.loader-section .loader-container .main-img.active .circle {
+.spaceship-section .spaceship-container__image .main-img.active .circle {
     opacity: 1;
     mix-blend-mode: screen;
 }
 
-.loader-section .loader-container .main-img.active .circle:nth-child(1) {
+.spaceship-section .spaceship-container__image .main-img.active .circle:nth-child(1) {
 
     background-image: url("../../assets/planets-img/planet1.png");
     background-size: cover;
@@ -108,7 +108,7 @@
     transform: translateY(-220%);
 }
 
-.loader-section .loader-container .main-img.active .circle:nth-child(2) {
+.spaceship-section .spaceship-container__image .main-img.active .circle:nth-child(2) {
     background-image: url("../../assets/planets-img/planet2.png");
     background-size: cover;
     background-position: center;
@@ -116,7 +116,7 @@
     transform: translate(160% ,-160%);
 }
 
-.loader-section .loader-container .main-img.active .circle:nth-child(3) {
+.spaceship-section .spaceship-container__image .main-img.active .circle:nth-child(3) {
     background-image: url("../../assets/planets-img/planet3.png");
     background-size: cover;
     background-position: center;
@@ -124,7 +124,7 @@
     transform: translate(220%);
 }
 
-.loader-section .loader-container .main-img.active .circle:nth-child(4) {
+.spaceship-section .spaceship-container__image .main-img.active .circle:nth-child(4) {
     background-image: url("../../assets/planets-img/planet4.png");
     background-size: cover;
     background-position: center;
@@ -132,7 +132,7 @@
     transform: translate(160% ,160%);
 }
 
-.loader-section .loader-container .main-img.active .circle:nth-child(5) {
+.spaceship-section .spaceship-container__image .main-img.active .circle:nth-child(5) {
     background-image: url("../../assets/planets-img/planet5.png");
     background-size: cover;
     background-position: center;
@@ -140,7 +140,7 @@
     transform: translateY(220%);
 }
 
-.loader-section .loader-container .main-img.active .circle:nth-child(6) {
+.spaceship-section .spaceship-container__image .main-img.active .circle:nth-child(6) {
     background-image: url("../../assets/planets-img/planet6.png");
     background-size: cover;
     background-position: center;
@@ -148,7 +148,7 @@
     transform: translate(-160%, 160%);
 }
 
-.loader-section .loader-container .main-img.active .circle:nth-child(7) {
+.spaceship-section .spaceship-container__image .main-img.active .circle:nth-child(7) {
     background-image: url("../../assets/planets-img/planet7.png");
     background-size: cover;
     background-position: center;
@@ -156,7 +156,7 @@
     transform: translateX(-220%);
 }
 
-.loader-section .loader-container .main-img.active .circle:nth-child(8) {
+.spaceship-section .spaceship-container__image .main-img.active .circle:nth-child(8) {
     background-image: url("../../assets/planets-img/planet8.png");
     background-size: cover;
     background-position: center;
@@ -164,7 +164,7 @@
     transform: translate(-160%, -160%);
 }
 
-.loader-container img {
+.spaceship-container__image img {
     position: absolute;
     height: 15rem;
     width: 15rem;
@@ -173,10 +173,7 @@
 }
 
 @media screen and (max-width: 1050px) {
-    .loader-section__container {
-        width: 80%;
-    }
-    .loader-text-container {
+    .spaceship-container__text {
         flex-wrap: wrap;
         font-size: 1.5rem;
         color: #fff;
@@ -188,7 +185,7 @@
         line-height: 4rem;
     
     } 
-    .loader-text__dot  {
+    .spaceship-text__dot  {
         width: 0.5rem;
         height: 0.5rem;
         margin-inline: 1.5rem;
@@ -196,12 +193,7 @@
 }
 
 @media screen and (max-width: 650px) {
-    .loader-section__container {
-        width: 80%;
-
-    }
-
-    .loader-text-container {
+    .spaceship-container__text {
         flex-wrap: wrap;
         font-size: 1rem;
         
@@ -211,36 +203,32 @@
         justify-content: center;
         align-items: center;
     } 
-    .loader-text__dot  {
+    .spaceship-text__dot  {
         width: 0.3rem;
         height: 0.3rem;
         margin-inline: 1.5rem;
     }
-    .loader-section .loader-container {
+    .spaceship-section .spaceship-container__image {
         height: 20rem;
         width: 20rem;
     }
-    .loader-container img {
+    .spaceship-container__image img {
         height: 10rem;
         width: 10rem;
     }
-    .loader-section .loader-container .main-img .circle {
+    .spaceship-section .spaceship-container__image .main-img .circle {
         height: 3rem;
         width: 3rem;
     }
-    .loader-text__dot {
+    .spaceship-text__dot {
         width: 100%;
         display: block;
     }
 }
 
 @media screen and (max-width: 490px) {
-    .loader-section__container {
-        width: 80%;
 
-    }
-
-    .loader-text-container {
+    .spaceship-container__text {
         flex-wrap: wrap;
         font-size: 1rem;
         
@@ -251,23 +239,23 @@
         align-items: center;
     
     } 
-    .loader-text__dot  {
+    .spaceship-text__dot  {
         width: 0.3rem;
         height: 0.3rem;
         margin-inline: 1.5rem;
   
     }
-    .loader-section .loader-container {
+    .spaceship-section .spaceship-container {
         height: 15rem;
         width: 15rem;
 
     }
-    .loader-container img {
+    .spaceship-container__image img {
         height: 9rem;
         width: 9rem;
  
     }
-    .loader-section .loader-container .main-img .circle {
+    .spaceship-section .spaceship-container__image .main-img .circle {
         height: 3rem;
         width: 3rem;
 
