--- a/src/containers/about/about.css
+++ b/src/containers/about/about.css
@@ -3,13 +3,14 @@
     height: 100vh;
     position: relative;
     
-    top: 0;
+
  
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-bottom: 35rem;
+    margin-top: 30rem;
 
 }
 
