--- a/src/containers/home/home.css
+++ b/src/containers/home/home.css
@@ -5,178 +5,163 @@
     z-index: 1;
 }
 
-.home-section .hero-container {
+.hero-container {
+    z-index: 10;
     width: 100vw;
     height: 100vh;
-    position: relative;
+    display: grid;
+    grid-template:
+        "top top top" 1fr
+        "left content right" 3fr
+        "bottom bottom bottom" 1fr / 1fr 2fr 1fr;
+}
 
+.top {
+    grid-area: top;
+}
+  
+.left {
+    grid-area: left;
+}
+  
+.right {
+    grid-area: right;
+}
+  
+.bottom {
+    grid-area: bottom;
+}
+
+.spaceship {
+    grid-area: content;
+}
+
+.home-section .hero-bg {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    z-index: 5;
     display: flex;
     justify-content: center;
     align-items: center;
-
     background: transparent;
-
-
 }
 
-.home-section .hero-container img {
-    position: absolute;
+.home-section .hero-bg img {
     width: 100%; 
     pointer-events: none;
-
-}
-
-.hero-stars {
-    z-index: 5;
-
 
     position:absolute;
     top: 0;
     left: 0;
 
-    pointer-events: none;
-    animation-delay: 0s;
+    opacity: 0.2;
     pointer-events: none;
     animation: movingStars 100s ease-in infinite,
     movingBackground 18s linear infinite;
 }
-.home-section .hero-container img.hero-planet {
-    z-index: 6;
 
-    mix-blend-mode: screen;
-    animation: floatingDown 5s ease-in-out infinite;
+.hero-bg-stars1 {
+    animation-delay: 0s;
+
+}
+.hero-bg-stars2 {
+    animation-delay: 5s;
+}
+.hero-bg-stars3 {
+    animation-delay: 10s;
 }
 
-.home-section .hero-container img.hero-bg-left {
-    z-index: 7;
-
-    animation: floatingUp 4s ease-in-out infinite;
-    padding-bottom: 6em;
-}
-
-.home-section .hero-container img.hero-bg-right {
-    z-index: 8;
-
-    animation: floatingUp 4s ease-in-out infinite;
-    padding-bottom: 6em;
-}
-
-.hero-bg-front {
-    z-index: 9;
-    bottom: 0;
-
-
-    /* margin-top: 5em; */
-}
-
-@keyframes floatingUp {
-    0% { transform: none; }
-    50%  { transform: translate(0, 10px); }
-    100% { transform: none; }  
-}
-
-@keyframes floatingDown {
-    0% { transform: none; }
-    50%  { transform: translate(0, -10px)  }
-    100% { transform: none; }  
-}
 
 @keyframes movingStars {
     0%,20%,40%,60%,80%, 100% {
-        opacity: 0;
-     
+        opacity: 0.2;   
     }
-    
     10%,30%,50%,70%,90% {
-        opacity: 0.5;
-   
-    }
-    
+        opacity: 0.5; 
+    } 
 }
 
 @keyframes movingBackground {
     0% {
-        transform: scale(1);
-      
+        transform: scale(1);      
     }
     100% {
         transform: scale(2);
-    }
-    
+    }  
 }  
 
-.hero-bottom {
+.home-container {
     width: 100%;
-    height: 140vh;
+    height: 182vh;
     position: relative;
-    
 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    
-}
-.hero-bottom1,
-.hero-bottom2 {
-    width: 67%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    gap: 15% 5%;   
 }
 
+.first-left {
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+.first-right {
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+.second-left {
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+.second-right {
+    grid-column: 3/4;
+    grid-row: 3/4;
+}
+.third-left {
+    grid-column: 2/3;
+    grid-row: 4/5;
+}
+.third-right {
+    grid-column: 3/4;
+    grid-row: 4/5;
+}
+.home-container-top {
+    grid-column: 1/-1;
+    grid-row: 1/2;
+}
+.home-container-left {
+    grid-column: 1/2;
+    grid-row: 1/-1;
+}
+.home-container-right {
+    grid-column: -2/-1;
+    grid-row: 1/-1;
+}
+.home-container-bottom {
+    grid-column: 1/-1;
+    grid-row: -2/-1;
+}
 
-
-.hero-image1,
-.hero-image2 {
+.hero-image {
     display: block;
-    /* position: absolute; */
-    /* margin-left: 40rem; */
-    width: 15rem;
-    height: 20rem;
+    width: 100%;
+    height: 18rem;
     background-color: aliceblue;
     filter: blur(0.2rem);
     /* transform: translate(50px, -50px); */
     border-radius: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-
 }
 
-.hero-text1,
-.hero-text2 {
-    font-size: 6.1rem;
+.hero-text {
+    font-size: 4rem;
     color: white;
     font-weight: 800;
     letter-spacing: 0.5rem;
 }
 
-/* .hero-image1 {
-    background-image: url("../../assets/NFT-images/1651.png");
-    background-position: center;
-    background-size: cover;
-}
 
-.hero-image2 {
-    background-image: url("../../assets/NFT-images/1690.png");
-    background-position: center;
-    background-size: cover;
-}
 
-.rocket-img {
-    position: absolute;
-    width: 15rem;
-    height: 15rem;
-    right: 0;
 
-    display: flex;
-    justify-content: flex-end;
-  
-}
-
-.rocket-img img {
-    width: 5rem;
-    height: 4rem;
-    transform: rotate(190deg);
- 
-} */
 
