--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-#HEADER {
-  height: 280vh;
+/* #HEADER {
+  height: 300vh;
 
-}
+} */
 #BODY,
 #FOOTER {
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;
+  height: 100vh; */
   position: relative;
   z-index: 1;
 }
@@ -16,8 +16,8 @@
 
 
   z-index: 100;
-  width: 100%;
-  min-height: 500vh;
+  /* width: 100%;
+  min-height: 500vh; */
 
   display: flex;
   flex-direction: column;
