--- a/src/containers/home/home.css
+++ b/src/containers/home/home.css
@@ -1,11 +1,12 @@
 .home-section {
     width: 100vw;
-    height: 100vh;
+    height: 250vh;
     position: relative;
     z-index: 1;
 }
 
 .hero-container {
+
     z-index: 10;
     width: 100vw;
     height: 100vh;
@@ -14,6 +15,7 @@
         "top top top" 1fr
         "left content right" 3fr
         "bottom bottom bottom" 1fr / 1fr 2fr 1fr;
+
 }
 
 .top {
@@ -94,49 +96,57 @@
 .home-container {
     width: 100%;
     height: 182vh;
-    position: relative;
 
     display: grid;
     grid-template-columns: 1fr 2fr 2fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-    gap: 15% 5%;   
+    grid-template-rows: 0.2fr 1fr 1fr 1fr 0.2fr;
+    gap: 5% 5%;   
+ 
 }
 
 .first-left {
     grid-column: 2/3;
     grid-row: 2/3;
+
 }
 .first-right {
     grid-column: 3/4;
     grid-row: 2/3;
+  
 }
 .second-left {
     grid-column: 2/3;
     grid-row: 3/4;
+
 }
 .second-right {
     grid-column: 3/4;
     grid-row: 3/4;
+ 
 }
 .third-left {
     grid-column: 2/3;
     grid-row: 4/5;
+
 }
 .third-right {
     grid-column: 3/4;
     grid-row: 4/5;
+  
 }
 .home-container-top {
     grid-column: 1/-1;
     grid-row: 1/2;
+   
 }
 .home-container-left {
     grid-column: 1/2;
-    grid-row: 1/-1;
+    grid-row: 2/-2;
+
 }
 .home-container-right {
     grid-column: -2/-1;
-    grid-row: 1/-1;
+    grid-row: 2/-2;
 }
 .home-container-bottom {
     grid-column: 1/-1;
@@ -165,3 +175,78 @@
 
 
 
+
+
+
+@media screen and (max-width: 1050px) {
+    .home-section {
+        height: 300vh;
+    }
+    .home-container {
+        height: 200vh;
+        grid-template-columns: 1fr 3fr 1fr;
+        grid-template-rows: 0.3fr 1fr 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr 0.5fr 0.3fr;
+    }
+    .home-container-top {
+        grid-column: 1/-1;
+        grid-row: 1/2;
+        order: 0;
+    }
+
+    .first-left {
+        grid-column: 2/3;
+        grid-row: 2/3;
+        order: 1;
+    }
+    .first-right {
+        grid-column: 2/3;
+        grid-row: 3/4;
+        order: 2;
+      
+    }
+    .second-left {
+        grid-column: 2/3;
+        grid-row: 4/5;
+        order: 3;
+    
+    }
+    .second-right {
+        grid-column: 2/3;
+        grid-row: 5/6;
+        order: 4;
+     
+    }
+    .third-left {
+        grid-column: 2/3;
+        grid-row: 6/7;
+    
+    }
+    .third-right {
+        grid-column: 2/3;
+        grid-row: 7/8;
+      
+    }
+    .home-container-left {
+        grid-column: 1/2;
+        grid-row: 2/-2;
+    }
+    .home-container-right {
+        grid-column: -2/-1;
+        grid-row: 2/-2;
+    }
+  
+    .home-container-bottom {
+        grid-column: 1/2;
+        grid-row: -2/-1;
+    }
+
+}
+
+@media screen and (max-width: 650px) {
+
+
+}
+
+@media screen and (max-width: 490px) {
+
+}
