--- a/src/containers/about/about.css
+++ b/src/containers/about/about.css
@@ -1,18 +1,15 @@
 .about-section {
     width: 100%;
-    height: 100vh;
     position: relative;
-    
     top: 0;
+    padding: 1rem 15rem;
  
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-bottom: 35rem;
-
 }
-
 
 @keyframes yAxis {
     50% {
@@ -25,14 +22,12 @@
     50% {
       animation-timing-function: cubic-bezier(0.3, 0.27, 0.07, 1.64);
       transform: translateX(10rem);
-   
     }
-
   }
 
-
 .about {
-   width: 100%;
+   width: 85%;
+   height: 100%;
 
     display: flex;
     flex-direction: column;
@@ -52,27 +47,22 @@
       radial-gradient(at 37% 30%, rgba(198, 101, 94, 0.5) 0px, transparent 50%),
       radial-gradient(at 15% 0%, rgba(106, 98, 192, 0.5) 0px, transparent 50%),
       radial-gradient(at 56% 0%, rgba(191, 60, 152, 0.5) 0px, transparent 50%);
-
 }
 
 .about-features {
-
     display: flex;
- 
 }
 
 .about-features .features-container__feature {
-
     display: flex;
-
-  
 }
-.about-features .features-container__feature-title h1{
 
+.about-features .features-container__feature-title h1{
     width: 100%;
     font-family: var(--poppins);
     line-height: 2.9rem;
 }
+
 .about-features .features-container__feature-text {
     max-width: 600px;
     width: 60%;
@@ -80,36 +70,36 @@
 
 .about-heading {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     margin: 4rem 0.5rem 2rem;
 }
 
 .about-heading h1 {
-    width: 70%;
+    width: 100%;
+    text-align: center;
     font-weight: 800;
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     line-height: 3rem;
     font-family: var(--poppins);
-    filter: brightness(1.5);
-  /* text-shadow: 1px 1px 2px pink; */
-    
+    filter: brightness(1.5); 
 }
 
 .about-heading .about-heading__btn {
-    width: 25%;
-    height: 5.5rem;
-    background-image: url("../../assets/buttons-img/learn-more-btn.png");    
-    background-size: cover;
-    background-position: center;
+    width: 35%;
     mix-blend-mode: screen;
     filter: brightness(2.5);
     cursor: pointer;
+    transition: all 0.3;
+}
+.about-heading .about-heading__btn img {
+    width: 100%;
+    transition: all 0.3;
 }
 
 .about-heading .about-heading__btn:hover {
-    transition: all 0.8;
+
     transform: scale(1.1);
 }
 
@@ -119,18 +109,18 @@
     flex-direction: row!important;
     justify-content: space-between;
     width: 100%;
-    
     margin-top: 3rem;
 }
 
 .about-container .features-container__feature {
-    width: 30%;
+    width: 33%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-
+    margin-inline: 1.2rem;
 }
+
 .scroll-down {
     transform: rotate(90deg);
     position: absolute;
@@ -154,44 +144,42 @@
     text-transform: capitalize;
     font-weight: 100;
 }
+
 .scroll-down hr {
     background-color: blue;
     width: 20px;
 }
 
-
 .scroll-down .scroll {
     transform: rotate(-90deg);
     font-size: 100px;
-
 }
 
-@media screen and (max-width: 1050px) {
-    .about-container {
-        width: 100%;
-
+@media screen and (max-width: 1200px) {
+    .about-section {
+        padding: 1em 6em;
     }
 
-    
-    .about-features .features-container__feature {
-        
+    .about {
+        width: 90%;
+        height: auto;
+    }
+    .about-features .features-container__feature { 
         display: flex;
         flex-direction: column;
-        /* justify-content: center; */
         align-items: flex-start;
-       
         width: 100%;
     }
     .about-features .features-container__feature-title h1,
     .about-features .features-container__feature-text {
         width: 100%;
     }
-
     .about-heading {
         width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 2.5em;
     }
     .about-heading h1 {
         width: 110%;
@@ -201,54 +189,76 @@
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
-        /* justify-content: space-evenly; */
         width: 100%;
-        height: 100vh;
-        margin-top: 3rem;
+        margin-top: 3em;
+        padding: 0;
+        margin: 0;
+
     }
+
+
     .about-container .features-container__feature {
+        width: 100%;
         display: flex;
         flex-direction: column;
+        margin-bottom: 4em;
+    }
+    .about-heading .about-heading__btn {
+        /* margin-top: 1.8em; */
+        width: 60%;
     }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 910px) {
+    .about-section {
+        padding: 1em 4em;
+    }
+    .about-container {
+        padding: 0;
+    }
     .about {
         width: 100%;
     }
     .about-heading {
-        margin: 2.5rem 0.5rem 2rem;
+        /* margin: 2.5rem 0.5rem 2rem; */
         width: 100%;
     }
     
     .about-heading h1 {
         width: 100%;
         font-weight: 700;
-        font-size: 1.4rem;
+        font-size: 1.4em;
 
         
     }
     
     .about-heading .about-heading__btn {
-        width: 70%;
-        height: 6rem;
+        width: 50%;
+        height: 8em;
+    }
+    .scroll-down {
+        display: none;
     }
 
 }
 
 @media screen and (max-width: 490px) {
+    .about-section {
+        padding: 1em 2em;
+    }
     .about-heading {
-        margin: 2.5rem 0.5rem 2rem;
+        margin: 2.5em 0.5em 2em;
         width: 100%;
     }
     
     .about-heading h1 {
-        width: 130%;
+        width: 140%;
         font-weight: 700; 
     }
     
     .about-heading .about-heading__btn {
-        width: 80%;
-        height: 6rem;
+        width: 100%;
+        height: 6em;
     }
+
 }
