--- a/src/containers/NFT/NFT.css
+++ b/src/containers/NFT/NFT.css
@@ -1,6 +1,6 @@
 .NFT-section {
     width: 100%;
-    height: 300vh;
+    height: 100vh;
 
     display: flex;
     flex-direction: column;
@@ -40,16 +40,15 @@
 }
 
 .NFT-section .NFT-title-line {
-    background-image: url("../../assets/header-img/flower-line.png");
-    background-position: center;
-    background-size: cover;
-
     width: 85%;
     height: 80px;
     top: 0;
     margin-bottom: 4rem;
 
     filter: brightness(10);
+}
+.NFT-section .NFT-title-line img {
+    width: 100%;
 }
 
 /* overrides the section__title's initial margin setting */
