edited NFT, roadmap, team section
NFT2,3 will be added after the roadmap section

--- a/src/components/CTA/CTA.css
+++ b/src/components/CTA/CTA.css
@@ -1,4 +1,10 @@
+.cta-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
 .cta{
+    width: 60%;
     display: flex;
     justify-content: space-between;
     align-items: center;
