--- a/src/containers/roadmap/roadmap.css
+++ b/src/containers/roadmap/roadmap.css
@@ -1,10 +1,12 @@
 .roadmap-section {
     position: relative;
     width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 7rem;
 }
 
 
@@ -14,7 +16,7 @@
 
 
 .roadmap-container div {
-    line-height: 45px;
+    line-height: 50px;
     font-size: 25px;
     color: #fff;
   
