--- a/src/containers/features/features.css
+++ b/src/containers/features/features.css
@@ -1,11 +1,12 @@
 .features-section {
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     position: relative;
 
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 8rem;
 }
 
 .features-container {
