--- a/src/containers/team/team.css
+++ b/src/containers/team/team.css
@@ -12,7 +12,7 @@
 }
 
 .team-section .team-member-container {
-    width: 70%;
+    width: 80%;
 }
 
 .team-section .team-member-container .member {
@@ -26,6 +26,7 @@
     background-color: rgba(67, 67, 67, 0.172);
     padding: 20px;
     border-radius: 50px;
+    transition: all 3s;
 }
 
 .team-section .team-member-container .member .member-img {
@@ -56,6 +57,7 @@
 }
 
 .team-section .team-member-container .member .member-info {
+    margin-top: 9px;
     margin-left: 50px;
     max-width: 50%;
 }
@@ -70,6 +72,7 @@
     font-size: 14px;
     font-weight: 400;
     letter-spacing: 2px;
+    margin-top: 18px;
 } 
 
 
@@ -81,21 +84,87 @@
 }
 
 
-/* .team-member-container .member .member-info .contact-member {
-    background: var(--color-sec-light);
-    padding: 17px 35px;
-    font-size: 18px;
-    
-    border-radius: 50px;
 
-    transition: .1s ease;
-} */
 
-/* .team-member-container .member .member-info .contact-member span {
-    text-transform: capitalize;
+.team-section .team-member-container .member:hover {
+    transition: background .3s ease, transform .2s ease;
 }
 
-.team-member-container .member .member-info .contact-member:hover {
-    background: transparent;
-    border: 2px solid var(--color-sec-light);
-} */
+
+
+.team-section .team-member-container .member:hover {
+    background: rgba(255, 255, 255, 0.096);
+    transform: scale(1.014);
+
+}
+
+.team-contact-links {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 20%;
+    /* margin-top: 40px; */
+    /* padding: 100px; */
+}
+
+.team-contact {
+    position: inherit;
+    height: 3rem;
+    width: 3rem;
+    background: rgba(0, 0, 0, 0.3222 );
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: background .3s ease, transform .2s ease;
+ 
+}
+
+.team-contact:hover {
+    background: rgba(255, 255, 255, 0.096);
+    background: var(--color-sec-light);
+    transition: .1s ease;
+    /* transform: scale(1.1); */
+    cursor: pointer;
+}
+
+.team-about-container {
+    /* background: var(--gradient-text); */
+    width: 100%;
+    height: 50%;
+}
+.team-contact h2 {
+    position: relative;
+    margin-top: 15px;
+
+    margin-bottom: 15px;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    text-transform: capitalize;
+    font-size: 0.9rem;
+    font-weight: 500;
+    letter-spacing: 2px;
+    /* color: var(--color-pri); */
+}
+
+.team-contact h2 span {
+    text-align: center;
+    font-size: 0.9rem;
+    font-weight: 100;
+    margin-top: 15px;
+    color: rgb(202, 202, 202);
+}
+
+.team-contact .icon {
+    font-size: 4rem;
+}
+
+.member-info--first-row {
+    width: 35rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
