--- a/src/containers/FAQ/FAQ.css
+++ b/src/containers/FAQ/FAQ.css
@@ -5,43 +5,62 @@
     justify-content: center;
     align-items: center;
 }
-
-.cs__FAQ-content {
+.FAQ-content .faq-row-wrapper {
+    border-radius: 20px;
+    background: transparent;
+}
+.FAQ-content {
     width: 95%;
     padding: 0 80px;
+    margin-top: 2em;
+    border-radius: 20px;
 }
 
-.FAQ-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.FAQ-content .faq-body {
     font-size: 1.5rem;
     padding: 15px 30px;
-    color: var(--gradient-bar);
-}
-
-.FAQ-button {
-    border: none;
-    background: none;
-    color: white;
-    font-size: 2rem;
-}
-
-.FAQ__item-body {
-    border: none;
-    border-radius: 20px;
     background: var(--gradient-bar);
+    border-radius: 20px;
+ 
 }
 
-.FAQ__item-body {
+.FAQ-content .faq-body .faq-row {
+    padding: 0.6em;
+    display: flex;
+}
+.FAQ-content .faq-body .faq-row .row-title {
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 600;
+    padding: 1em 0.5em;
+    
+}
+.FAQ-content .faq-body .faq-row .row-content {
+    border-radius: 20px;
+
+}
+.FAQ-content .faq-body .faq-row .row-title .icon-wrapper,
+.FAQ-content .faq-body .faq-row .row-title .icon-wrapper .arrow-image {
+   /* font-weight: 900; */
+   width: 3rem;
+   height: 3rem;
+}
+
+.FAQ-content .faq-body .faq-row .row-content-text {
+    color: white!important;
+    font-size: 1.3rem!important;
+    padding: 1em 0.5em!important;
+    line-height: 30px;
+}
+
+.FAQ-content .faq-body {
     position: relative;
 
     text-decoration: none;
     font-family: var(--font-family1);
     border-style: none;
     border-radius: 14px;
-    color: #2b1055;
-    transform: translateY(100px);
+
     box-shadow: rgba(0, 0, 0, 0.698) 0px 22px 70px 4px;
 
     letter-spacing: .15rem;
@@ -55,52 +74,7 @@
     background: var(--gradient-bar);
     z-index: 10;   
 }   
-
-.FAQ__item-body:before {
-        content: "";
-        background-color: #fff;
-        top: 0;
-        left: 0;
-        width: 30%;
-        height: 50px;
-        position: absolute;
-        transform: translateX(-100%) rotate(45deg);
-        transition: all 0.3s;
-        z-index: 11;
-    }
-
-.FAQ__item-body:hover::before {
-        transform: translateX(310%) rotate(45deg);
-    }
-
-.FAQ-answer {
-    background: linear-gradient(103.22deg, #ae67fab4 -13.86%, #f49867b5 99.55%);
-    backdrop-filter: blur(3em);
-    font-size: 1.2rem;
-    padding: 15px 30px;
-
+.FAQ-content .faq-body:hover {
+    transform: scale(1.01);
 }
 
-.FAQ-button {
-    width: 45px;
-    height: 45px;
-    border: none;
-    background: none;
-    color: white;
- 
-    z-index: 10;
-    transition: all 0.5s linear;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all .3s;
-}
-
-.FAQ-button.is-open,
-.FAQ-button.is-open:after {
-    transform: rotate(45deg)!important;
-}
-.FAQ-button:hover, .FAQ-button.is-open {
-    color: #000;
-    font-weight: bold;
-}
