edited team,FAQ, CTA sectiopn
added scroll animation

--- a/src/components/CTA/CTA.css
+++ b/src/components/CTA/CTA.css
@@ -12,10 +12,9 @@
     flex-direction: row;
 
     padding: 2rem;
-    margin: 4rem;
+    /* margin: 4rem; */
     border-radius: 1rem;
     background: var(--gradient-bar);
-    margin: 0 100px;
 }
 
 .cta-content {
