--- a/src/containers/contact/contact.css
+++ b/src/containers/contact/contact.css
@@ -1,3 +1,10 @@
+.contact-section{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .contact-container {
     position: relative;
     display: flex;
@@ -5,14 +12,12 @@
     justify-content: center;
     align-items: center;
     min-height: 80vh;
-    margin-top: 100px;
+    /* margin-top: 100px; */
     padding: 30px;
     text-align: center;
-    width: 100%;
+    width: 80%;
 
 }
-
-
 
 .contact-container .contact-links {
     position: relative;
