--- a/src/containers/features/features.css
+++ b/src/containers/features/features.css
@@ -1,16 +1,16 @@
 .features-section {
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     position: relative;
 
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 8rem;
+    margin-top: 8em;
 }
 
 .features-container {
-    width: 85%;
+    width: 100%;
 
     display: flex;
     justify-content: space-between;
