--- a/src/index.css
+++ b/src/index.css
@@ -16,15 +16,12 @@ body {
   min-height: 100vh;
   width: 100vw;
   position: relative;
-  top: 0;
   z-index: 0;
-  display: flex;
-  flex-direction: column;
-
+  /* display: flex;
+  flex-direction: column; */
   top: 0;
   left: 0;
-
-   background: rgb(2, 2, 26)!important;
+  background: rgb(2, 2, 26)!important;
 
 }
 
