--- a/src/containers/FAQ/FAQ.css
+++ b/src/containers/FAQ/FAQ.css
@@ -29,7 +29,7 @@
     display: flex;
 }
 .FAQ-content .faq-body .faq-row .row-title {
-    color: white;
+    color: white!important;
     font-size: 1.5rem;
     font-weight: 600;
     padding: 1em 0.5em;
